working on I2C communication with extensible modules

--- a/walkterm-OTG/main/CMakeLists.txt
+++ b/walkterm-OTG/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "walkterm-OTG.c"
-                    INCLUDE_DIRS ".")
+set(srcs "walkterm-OTG.c"
+    )
+
+idf_component_register(SRCS ${srcs} INCLUDE_DIRS ".")
